--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
+    <meta name="keywords" content="票圈 视频剪辑 视频编辑 在线视频制作 图文转视频 视频制作 长视频 票圈视频"/>
+    <meta name="description" content="票圈视频表达工具是一款简单易用，且功能强大的视频剪辑编辑软件，视频支持快速合并，文字语音智能朗读，自动智能匹配素材。并拥有丰富的视频素材、图片素材和音频素材等。可以支持无限添加素材，字幕、图文等。是视频制作用户软件中的不二之选。票圈视频-用视频发声。"/>
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>票圈视频</title>
+    <title>视频剪辑软件_在线图文转视频工具_视频创作-票圈视频【官网】</title>
   </head>
   <body>
     <noscript>
