--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="pragram" content="no-cache">
+    <meta http-equiv="cache-control" content="no-cache, no-store, must-revalidate">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
     <meta name="baidu-site-verification" content="code-1He5ojNZAn" />
     <meta name="keywords" content="票圈 视频剪辑 视频编辑 在线视频制作 图文转视频 视频制作 长视频 票圈视频"/>
